# proc-macro-regex

./: Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: compare.rs
fuzz/: Cargo.toml
fuzz/src/: check.rs
src/: character.rs  lib.rs  macro_input.rs
src/dfa/: mod.rs  nfa_to_dfa.rs
src/dfa/to_tokens/: binary_search.rs  lookup_table.rs  mod.rs
src/nfa/: mod.rs  repetition.rs
tests/: regex.rs
