[package]
name = "proc-macro-regex"
version = "1.0.0"
authors = ["LinkTed <link.ted@mailbox.org>"]
license = "BSD-3-Clause"
readme = "README.md"
description = "A proc macro regex library"
keywords = ["regex", "proc-marco"]
edition = "2018"
include = [
    "src/**/*.rs",
    "tests/*.rs",
    "examples/*.rs", 
    "Cargo.toml",
    "README.md",
    "LICENSE",
    ]
repository = "https://github.com/LinkTed/proc-macro-regex"
categories = ["text-processing"]

[lib]
proc-macro = true

[dependencies]
regex-syntax = "~0.6.26"
proc-macro2 = "~1.0.36"
quote = "~1.0.18"
thiserror = "~1.0.31"

[dependencies.syn]
version = "~1.0.96"
features = ["extra-traits"]

[dev-dependencies]
criterion = "~0.3.5"
regex = "~1.5.6"

[[bench]]
name = "compare"
harness = false
path = "benches/compare.rs"
